--- a/Carnival Gift Shop/How much/task-info.yaml
+++ b/Carnival Gift Shop/How much/task-info.yaml
@@ -47,5 +47,8 @@ files:
   learner_created: false
 feedback_link: https://hyperskill.org/projects/277/stages/1404/implement#comment
 check_profile: hyperskill_node_javascript
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: Mon, 10 Oct 2022 17:18:31 UTC
+record: 2
