--- a/Carnival Gift Shop/Welcome to the carnival/task-info.yaml
+++ b/Carnival Gift Shop/Welcome to the carnival/task-info.yaml
@@ -45,7 +45,7 @@ files:
     if __name__ == '__main__':
         CarnivalGiftShopTest('main').run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/277/stages/1403/implement#comment
+feedback_link: https://hyperskill.org/learn/step/21704#comment
 check_profile: hyperskill_node_javascript
 status: Solved
 feedback:
