--- a/Carnival Gift Shop/Expect the unexpected/task-info.yaml
+++ b/Carnival Gift Shop/Expect the unexpected/task-info.yaml
@@ -473,7 +473,130 @@ files:
     if __name__ == '__main__':
         CarnivalGiftShopTest('main').run_tests()
   learner_created: false
+- name: mai.js
+  visible: true
+  text: |-
+    const input = require('sync-input');
+
+    const welcomeMessage = `WELCOME TO THE CARNIVAL GIFT SHOP!
+    Hello friend! Thank you for visiting the carnival!
+    Here's the list of gifts:\n`;
+    const gifts = [
+        {id: 1, name: "Teddy Bear", price: 10},
+        {id: 2, name: "Big Red Ball", price: 5},
+        {id: 3, name: "Huge Bear", price: 50},
+        {id: 4, name: "Candy", price: 8},
+        {id: 5, name: "Stuffed Tiger", price: 15},
+        {id: 6, name: "Stuffed Dragon", price: 30},
+        {id: 7, name: "Skateboard", price: 100},
+        {id: 8, name: "Toy Car", price: 25},
+        {id: 9, name: "Basketball", price: 20},
+        {id: 10, name: "Scary Mask", price: 75}
+    ];
+    const chooseMessage = `\nWhat do you want to do?
+    1-Buy a gift 2-Add tickets 3-Check tickets 4-Show gifts 5-Exit the shop`;
+    let totalTickets = 0;
+    let visiting = true;
+    console.log(welcomeMessage);
+
+    gifts.forEach((gift) => console.log(`${gift.id}- ${gift.name}, Cost: ${gift.price} tickets`));
+
+
+    while (visiting) {
+        choosePrompt();
+    }
+
+    function choicePrompt(choice) {
+        switch (choice) {
+            case 1:
+                pickAGift();
+                break;
+            case 2:
+                addTicketsPrompt();
+                break;
+            case 3:
+                showTickets();
+                break;
+            case 4:
+                handleGifts();
+                break;
+            case 5:
+                console.log("Have a nice day!");
+                visiting = false;
+                break;
+            default :
+                console.log("Please enter a valid number!")
+                choosePrompt();
+        }
+    }
+
+    function choosePrompt() {
+        console.log(chooseMessage);
+        choicePrompt(Number(input()));
+    }
+
+    function pickAGift() {
+        if (gifts.length <= 0) {
+            console.log("Wow! There are no gifts to buy.");
+            choosePrompt();
+        }
+        let giftChoice = Number(input("Enter the number of the gift you want to get: "));
+        if (Number.isNaN(giftChoice)) {
+            console.log("Please enter a valid number!");
+            choosePrompt();
+        }
+
+        if (!gifts.find(e => e.id === giftChoice)) {
+            console.log("There is no gift with that number!");
+            choosePrompt();
+        }
+        if (gifts.find(e => e.id === giftChoice)) {
+            if (gifts.find(e => e.id === giftChoice).price > totalTickets) {
+                console.log("You don't have enough tickets to buy this gift.");
+                choosePrompt();
+            }
+            console.log(`Here you go, one ${gifts.find(e => e.id === giftChoice).name}!`);
+            totalTickets -= gifts.find(e => e.id === giftChoice).price;
+            gifts.splice(gifts.indexOf(gifts.find(e => e.id === giftChoice)), 1);
+            showTickets();
+            choosePrompt();
+        }
+    }
+
+    function addTicketsPrompt() {
+        let amount = Number(input("Enter the ticket amount: "));
+        if (Number.isNaN(amount) || amount < 0 || amount > 1000) {
+            console.log("Please enter a valid number between 0 and 1000.");
+            return;
+        }
+        totalTickets += amount;
+        showTickets();
+        choosePrompt();
+    }
+
+    function showTickets() {
+        console.log(`Total tickets: ${totalTickets}`);
+        console.log("Have a nice day!");
+        choosePrompt();
+    }
+
+    function handleGifts() {
+        if (gifts.length > 0) {
+            console.log("Here's the list of gifts:\n");
+            gifts.forEach(gift => console.log(`${gift.id}- ${gift.name}, Cost: ${gift.price} tickets`));
+            console.log("Have a nice day!");
+            choosePrompt();
+        } else {
+            console.log("Here's the list of gifts:");
+            console.log("Wow! There are no gifts to buy.");
+            choosePrompt();
+        }
+    }
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/21708#comment
 check_profile: hyperskill_node_javascript
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: Wed, 12 Oct 2022 17:20:02 UTC
 record: -1
